k8s/user-ms-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: user-ms
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30001
  selector:
    app: user-ms
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ms
spec:
  selector:
    matchLabels:
      app: user-ms
  strategy: 
    type: Recreate
  template:
    metadata:
      labels: 
        app: user-ms
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: user-ms
        image: longbale1999/user-ms:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: user-ms
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
